--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	</head>
 	<body>
 		<div class="container">
-		<h1>Splat Painter</h1>
+		<h1>Splat Painter Milestone</h1>
 		<div style="text-align: center;">Patrick Lee, Lionel Verano, Jordan Argel, Eric Lin</div>
 
 		<br>
@@ -93,13 +93,18 @@
 			<li>Undo using ctrl + z</li>
 		</ul>
 
-		<h2>Resources</h2>
+		<h2>Video</h2>
 		<ul>
-			<li><a href="https://docs.gsplat.studio/main/">gsplat's documentation</a></li>
-			<li><a href="https://docs.nerf.studio/nerfology/methods/splat.html">Splatfacto website</a></li>
-			<li><a href="https://youtu.be/A1Gbycj0bWw?si=be9hhdD1JjPRUDmJ">Nerfstudio gaussian splatting video</a></li>
-			<li><a href="https://youtu.be/9p_i9nKZA4Q?si=qpMZtmrRClLkDl9K">Additional splatting video</a></li>
+			<li>embed vid here</li>
 		</ul>
+
+		<h2>Slides</h2>
+		<ul>
+			<li>slide1</li>
+			<li>slide2</li>
+			<li>slide3</li>
+		</ul>
+
 		</div>
 	</body>
 </html>
